--- a/colab-notebooks/SafariOnline_Public_Share_Day1_Part1.ipynb
+++ b/colab-notebooks/SafariOnline_Public_Share_Day1_Part1.ipynb
@@ -987,8 +987,8 @@
       "cell_type": "code",
       "source": [
         "f\"\"\"\n",
-        "This phrase is multiple sentenances long.\n",
-        "There phrase can be formatted like simpler sentances,\n",
+        "This phrase is multiple sentences long.\n",
+        "This phrase can be formatted like simpler sentences,\n",
         "for example, I can still talk about my favorite Martial Art {basic_string}\n",
         "\"\"\""
       ],
@@ -998,7 +998,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'\\nThis phrase is multiple sentenances long.\\nThere phrase can be formatted like simpler sentances,\\nfor example, I can still talk about my favorite Martial Art Brazilian Jiu Jitsu\\n'"
+              "'\\nThis phrase is multiple sentences long.\\nThere phrase can be formatted like simpler sentences,\\nfor example, I can still talk about my favorite Martial Art Brazilian Jiu Jitsu\\n'"
             ]
           },
           "metadata": {
@@ -1052,7 +1052,7 @@
       "source": [
         "f\"\"\"\n",
         "This phrase is multiple sentenances long.\n",
-        "There phrase can be formatted like simpler sentances,\n",
+        "There phrase can be formatted like simpler sentences,\n",
         "for example, I can still talk about my favorite Martial Art {basic_string}\n",
         "\"\"\".replace(\"\\n\", \"\")"
       ],
@@ -1062,7 +1062,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'This phrase is multiple sentenances long.There phrase can be formatted like simpler sentances,for example, I can still talk about my favorite Martial Art Brazilian Jiu Jitsu'"
+              "'This phrase is multiple sentences long.There phrase can be formatted like simpler sentences,for example, I can still talk about my favorite Martial Art Brazilian Jiu Jitsu'"
             ]
           },
           "metadata": {
