Fixed typos; was "postion" rather than "position"

--- a/colab-notebooks/SafariOnline_Public_Share_Day1_Part1.ipynb
+++ b/colab-notebooks/SafariOnline_Public_Share_Day1_Part1.ipynb
@@ -1738,9 +1738,9 @@
       },
       "cell_type": "code",
       "source": [
-        "for postion in list_of_bjj_positions:\n",
-        "    if \"guard\" in postion:\n",
-        "        print(postion)"
+        "for position in list_of_bjj_positions:\n",
+        "    if \"guard\" in position:\n",
+        "        print(position)"
       ],
       "execution_count": 0,
       "outputs": [
