--- a/colab-notebooks/SafariOnline_Public_Share_Day1_Part1.ipynb
+++ b/colab-notebooks/SafariOnline_Public_Share_Day1_Part1.ipynb
@@ -2911,7 +2911,7 @@
       "source": [
         "#### Functions that Yield (Generators)\n",
         "\n",
-        "A very useful style of programming is \"lazy evaluation\". A generator is an example of that. Generators yield an items at a time.\n",
+        "A very useful style of programming is \"lazy evaluation\". A generator is an example of that. Generators yield one item at a time.\n",
         "\n",
         "The example below return an \"infinite\" random sequence of attacks. The lazy portion comes into play in that while there is an infinite amount of values, they are only returned when the function is called."
       ]
