--- a/Public_Master_SafariOnline_Day1_Part1.ipynb
+++ b/Public_Master_SafariOnline_Day1_Part1.ipynb
@@ -101,7 +101,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "## Part 1.1: Introductory Concepts in Python, IPython and Jupyter\n",
+        "## Part 1.1: Introductory Concepts in Python, Jupyter and Colab\n",
         "\n",
         "* *[Read related material covered in Chapter 1 of Pragmatic AI](https://www.safaribooksonline.com/library/view/pragmatic-ai-an/9780134863924/ch01.xhtml#ch01)*\n",
         "\n",
@@ -115,7 +115,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "### Using IPython, Jupyter, and Python executable\n",
+        "### Using IPython, Jupyter, Colab and Python executable\n",
         "\n",
         "\n"
       ]
@@ -181,7 +181,9 @@
       },
       "cell_type": "markdown",
       "source": [
-        "#### Colab Notebook Key Features"
+        "#### Colab Notebook Key Features\n",
+        "\n",
+        "[Watch Colab Basics Video](https://www.safaribooksonline.com/videos/essential-machine-learning/9780135261118/9780135261118-EMLA_01_12_01)"
       ]
     },
     {
@@ -200,6 +202,76 @@
         "\n",
         "\n",
         "\n"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "hPWO_zyRopXN",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##### Mount GDrive\n"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "XI73HZNLobp4",
+        "colab_type": "code",
+        "outputId": "99af51a1-2c3e-4f53-8a06-9d1d7e80ccdb",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 124
+        }
+      },
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/gdrive', force_remount=True)"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdocs.test%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.photos.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fpeopleapi.readonly&response_type=code\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/gdrive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "UNyzZwgmoxwm",
+        "colab_type": "code",
+        "outputId": "7e09fa16-793c-487c-bf8f-310693c0ecb9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "cell_type": "code",
+      "source": [
+        "import os;os.listdir(\"/content/gdrive/My Drive/awsml\")"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['kaggle.json', 'credentials', 'config']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
       ]
     },
     {
@@ -3839,7 +3911,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "#### Applying a Function to a Pandas DataFrame\n",
+        "#### Applying Functions to Pandas DataFrames\n",
         "\n",
         "The final lesson on functions is to take this knowledge and use it on a DataFrame in Pandas. One of the more fundamental concepts in Pandas is use apply on a column vs iterating through all of the values. An example is shown below where all of the numbers are rounded to a whole digit."
       ]
@@ -4398,29 +4470,180 @@
     },
     {
       "metadata": {
-        "id": "fQhEoJu1tNRe",
+        "id": "1EBc2ohAonjw",
         "colab_type": "text"
       },
       "cell_type": "markdown",
       "source": [
-        "## References"
+        "## Homework Excercises\n",
+        "\n"
       ]
     },
     {
       "metadata": {
-        "id": "u6BaXDS7tQTD",
+        "id": "10NtU6hV4nT6",
         "colab_type": "text"
       },
       "cell_type": "markdown",
       "source": [
-        "*   [Pragmatic AI: An Introduction to Cloud-Based Machine Learning-Physical Book](http://www.informit.com/store/pragmatic-ai-an-introduction-to-cloud-based-machine-9780134863917)\n",
-        "*   [Pragmatic AI: Pragmatic AI: An Introduction to Cloud-Based Machine Learning-SafariOnline Book](https://www.safaribooksonline.com/library/view/pragmatic-ai-an/9780134863924/)\n",
-        "*  [Essential Machine Learning and AI with Python and Jupyter Notebook-Video-SafariOnline](https://www.safaribooksonline.com/videos/essential-machine-learning/9780135261118)\n",
-        "* [Essential Machine Learning and AI with Python and Jupyter Notebook- Purchase Video](http://www.informit.com/store/essential-machine-learning-and-ai-with-python-and-jupyter-9780135261095)\n",
-        "*   [noahgift.com](https://noahgift.com/)\n",
-        "*   [paiml.com](https://paiml.com/)\n",
-        "* [Forbes:  Here come the notebooks](https://www.forbes.com/sites/forbestechcouncil/2018/08/17/here-come-the-notebooks/#766563807609)\n",
-        "* [Circleci:  Increase reliability in data science and ML projects](https://circleci.com/blog/increase-reliability-in-data-science-and-machine-learning-projects-with-circleci/)"
+        "### Watch Colab Videos on Safari Live Lesson:  *Essential Machine Learning and AI with Python and Jupyter Notebook*\n"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "BwCKU8ug4sNB",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "Get Familiar with Colab and Master basic and advanced Features\n",
+        "\n",
+        "* [12.1 Perform Colaboratory basics ](https://www.safaribooksonline.com/videos/essential-machine-learning/9780135261118/9780135261118-EMLA_01_12_01)\n",
+        "\n",
+        "* [12.2 Use Advanced Colab Features](https://www.safaribooksonline.com/videos/essential-machine-learning/9780135261118/9780135261118-EMLA_01_12_02)\n"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "fdm3kA-Fo4pI",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### Can you Return random attacks without repeating?\n",
+        "\n"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "btp0LY4U5fhY",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "* keep track of previous calls and run random again if it finds a previous\n",
+        "\n",
+        "```\n",
+        "def lazy_return_random_attacks():\n",
+        "    \"\"\"Yield attacks each time\"\"\"\n",
+        "    import random\n",
+        "    attacks = {\"kimura\": \"upper_body\",\n",
+        "           \"straight_ankle_lock\":\"lower_body\", \n",
+        "           \"arm_triangle\":\"upper_body\",\n",
+        "            \"keylock\": \"upper_body\",\n",
+        "            \"knee_bar\": \"lower_body\"}\n",
+        "    while True:\n",
+        "        random_attack = random.choices(list(attacks.keys()))\n",
+        "        yield random_attack\n",
+        "        \n",
+        "```\n",
+        "\n",
+        "pseudo code:  if attack in previous_attacks:\n",
+        "                              ...new random\n",
+        "                          random_attack    "
+      ]
+    },
+    {
+      "metadata": {
+        "id": "jTj3ny5vo8GN",
+        "colab_type": "code",
+        "outputId": "fcc7db55-7d83-4807-dd58-a2f9585549a5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "cell_type": "code",
+      "source": [
+        "def func():\n",
+        "  l = [1,2,3]\n",
+        "  return l\n",
+        "func()\n",
+        "  "
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 156
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "uLKSr48YKgSR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "def lazy_func():\n",
+        "  l = [1,2,3]\n",
+        "  for item in l:\n",
+        "    yield item\n",
+        "gen = lazy_func()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "G4mJZ3TnKmbd",
+        "colab_type": "code",
+        "outputId": "ed742705-ba31-42bf-8415-0cfb1c165866",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 166
+        }
+      },
+      "cell_type": "code",
+      "source": [
+        "next(gen)"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "StopIteration",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-162-6e72e47198db>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgen\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mStopIteration\u001b[0m: "
+          ]
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "2IoYYSGXKsnR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "EO5CzCfH5ejj",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        ""
       ]
     },
     {
@@ -4902,157 +5125,13 @@
     },
     {
       "metadata": {
-        "id": "1EBc2ohAonjw",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "## Homework Excercises\n",
-        "\n"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "fdm3kA-Fo4pI",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "### Can you Return random attacks without repeating?\n",
-        "\n",
-        "* keep track of previous calls and run random again if it finds a previous\n",
-        "\n",
-        "```\n",
-        "def lazy_return_random_attacks():\n",
-        "    \"\"\"Yield attacks each time\"\"\"\n",
-        "    import random\n",
-        "    attacks = {\"kimura\": \"upper_body\",\n",
-        "           \"straight_ankle_lock\":\"lower_body\", \n",
-        "           \"arm_triangle\":\"upper_body\",\n",
-        "            \"keylock\": \"upper_body\",\n",
-        "            \"knee_bar\": \"lower_body\"}\n",
-        "    while True:\n",
-        "        random_attack = random.choices(list(attacks.keys()))\n",
-        "        yield random_attack\n",
-        "        \n",
-        "```\n",
-        "\n",
-        "pseudo code:  if attack in previous_attacks:\n",
-        "                              ...new random\n",
-        "                          random_attack    "
-      ]
-    },
-    {
-      "metadata": {
-        "id": "jTj3ny5vo8GN",
-        "colab_type": "code",
-        "outputId": "fcc7db55-7d83-4807-dd58-a2f9585549a5",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
-      },
-      "cell_type": "code",
-      "source": [
-        "def func():\n",
-        "  l = [1,2,3]\n",
-        "  return l\n",
-        "func()\n",
-        "  "
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[1, 2, 3]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 156
-        }
-      ]
-    },
-    {
-      "metadata": {
-        "id": "uLKSr48YKgSR",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "def lazy_func():\n",
-        "  l = [1,2,3]\n",
-        "  for item in l:\n",
-        "    yield item\n",
-        "gen = lazy_func()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "G4mJZ3TnKmbd",
-        "colab_type": "code",
-        "outputId": "ed742705-ba31-42bf-8415-0cfb1c165866",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 166
-        }
-      },
-      "cell_type": "code",
-      "source": [
-        "next(gen)"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "StopIteration",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-162-6e72e47198db>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgen\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mStopIteration\u001b[0m: "
-          ]
-        }
-      ]
-    },
-    {
-      "metadata": {
-        "id": "2IoYYSGXKsnR",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "NOruEuqeK5lJ",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "##faq\n"
-      ]
-    },
-    {
-      "metadata": {
         "id": "N9zJtAd5K8AK",
         "colab_type": "text"
       },
       "cell_type": "markdown",
       "source": [
-        "the concept of **args and **Kwargs is unclear to be, it would be glad to elaborate on this this during the break? Decorators is also unclear to me"
+        "### Q: the concept of **args and **Kwargs is unclear \n",
+        "A:  See below, it allows arbitrary or \"N\" arguments"
       ]
     },
     {
@@ -5145,17 +5224,8 @@
       },
       "cell_type": "markdown",
       "source": [
-        "# What is a dataframe"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "V29y_YLUPNqN",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "Another data structure in Python, but like an excel spreadsheet:  columns and rows."
+        "### Q: What is a dataframe\n",
+        "A:  Another data structure in Python, but like an excel spreadsheet:  columns and rows."
       ]
     },
     {
@@ -5230,6 +5300,33 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "fQhEoJu1tNRe",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## References"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "u6BaXDS7tQTD",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "*   [Pragmatic AI: An Introduction to Cloud-Based Machine Learning-Physical Book](http://www.informit.com/store/pragmatic-ai-an-introduction-to-cloud-based-machine-9780134863917)\n",
+        "*   [Pragmatic AI: Pragmatic AI: An Introduction to Cloud-Based Machine Learning-SafariOnline Book](https://www.safaribooksonline.com/library/view/pragmatic-ai-an/9780134863924/)\n",
+        "*  [Essential Machine Learning and AI with Python and Jupyter Notebook-Video-SafariOnline](https://www.safaribooksonline.com/videos/essential-machine-learning/9780135261118)\n",
+        "* [Essential Machine Learning and AI with Python and Jupyter Notebook- Purchase Video](http://www.informit.com/store/essential-machine-learning-and-ai-with-python-and-jupyter-9780135261095)\n",
+        "*   [noahgift.com](https://noahgift.com/)\n",
+        "*   [paiml.com](https://paiml.com/)\n",
+        "* [Forbes:  Here come the notebooks](https://www.forbes.com/sites/forbestechcouncil/2018/08/17/here-come-the-notebooks/#766563807609)\n",
+        "* [Circleci:  Increase reliability in data science and ML projects](https://circleci.com/blog/increase-reliability-in-data-science-and-machine-learning-projects-with-circleci/)"
+      ]
     }
   ]
 }
