--- a/Public_SafariOnline_Day1_Part2.ipynb
+++ b/Public_SafariOnline_Day1_Part2.ipynb
@@ -1982,7 +1982,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "#### Understanding Sorting\n",
+        "### Understanding Sorting\n",
         "\n",
         "Python has powerful built-in sorting\n",
         "\n",
@@ -2295,27 +2295,34 @@
     },
     {
       "metadata": {
-        "id": "fQhEoJu1tNRe",
+        "id": "bJJH_ybw-CkM",
         "colab_type": "text"
       },
       "cell_type": "markdown",
       "source": [
-        "## References"
+        "## Homework"
       ]
     },
     {
       "metadata": {
-        "id": "u6BaXDS7tQTD",
+        "id": "Fr1NnKv3-JbT",
         "colab_type": "text"
       },
       "cell_type": "markdown",
       "source": [
-        "*   [Pragmatic AI: An Introduction to Cloud-Based Machine Learning-Physical Book](http://www.informit.com/store/pragmatic-ai-an-introduction-to-cloud-based-machine-9780134863917)\n",
-        "*   [Pragmatic AI: Pragmatic AI: An Introduction to Cloud-Based Machine Learning-SafariOnline Book](https://www.safaribooksonline.com/library/view/pragmatic-ai-an/9780134863924/)\n",
-        "*  [Essential Machine Learning and AI with Python and Jupyter Notebook-Video-SafariOnline](https://www.safaribooksonline.com/videos/essential-machine-learning/9780135261118)\n",
-        "* [Essential Machine Learning and AI with Python and Jupyter Notebook- Purchase Video](http://www.informit.com/store/essential-machine-learning-and-ai-with-python-and-jupyter-9780135261095)\n",
-        "*   [noahgift.com](https://noahgift.com/)\n",
-        "*   [paiml.com](https://paiml.com/)"
+        "### Watch Lesson 5:  Understand Python Classes"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "hlMLISAh-4wE",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "Go through lesson and make sure you understand how classes work by extending the inheritance workflow with your own class and method.\n",
+        "\n",
+        "[Lesson 5: Understand Python Classes](https://www.safaribooksonline.com/videos/essential-machine-learning/9780135261118/9780135261118-EMLA_01_05_00)"
       ]
     },
     {
@@ -2520,6 +2527,31 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "fQhEoJu1tNRe",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## References"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "u6BaXDS7tQTD",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "*   [Pragmatic AI: An Introduction to Cloud-Based Machine Learning-Physical Book](http://www.informit.com/store/pragmatic-ai-an-introduction-to-cloud-based-machine-9780134863917)\n",
+        "*   [Pragmatic AI: Pragmatic AI: An Introduction to Cloud-Based Machine Learning-SafariOnline Book](https://www.safaribooksonline.com/library/view/pragmatic-ai-an/9780134863924/)\n",
+        "*  [Essential Machine Learning and AI with Python and Jupyter Notebook-Video-SafariOnline](https://www.safaribooksonline.com/videos/essential-machine-learning/9780135261118)\n",
+        "* [Essential Machine Learning and AI with Python and Jupyter Notebook- Purchase Video](http://www.informit.com/store/essential-machine-learning-and-ai-with-python-and-jupyter-9780135261095)\n",
+        "*   [noahgift.com](https://noahgift.com/)\n",
+        "*   [paiml.com](https://paiml.com/)"
+      ]
     }
   ]
 }
