--- a/Public_Master_SafariOnline_Day1_Part1.ipynb
+++ b/Public_Master_SafariOnline_Day1_Part1.ipynb
@@ -183,7 +183,9 @@
       "source": [
         "#### Colab Notebook Key Features\n",
         "\n",
-        "[Watch Colab Basics Video](https://www.safaribooksonline.com/videos/essential-machine-learning/9780135261118/9780135261118-EMLA_01_12_01)"
+        "* [12.1 Perform Colaboratory basics ](https://www.safaribooksonline.com/videos/essential-machine-learning/9780135261118/9780135261118-EMLA_01_12_01)\n",
+        "\n",
+        "* [12.2 Use Advanced Colab Features](https://www.safaribooksonline.com/videos/essential-machine-learning/9780135261118/9780135261118-EMLA_01_12_02)"
       ]
     },
     {
