--- a/Public_SafariOnline_Day2_Part2.ipynb
+++ b/Public_SafariOnline_Day2_Part2.ipynb
@@ -8,7 +8,6 @@
       "provenance": [],
       "collapsed_sections": [
         "4z0oo6mLb347",
-        "lujOt1rIipPQ",
         "UCBAAf7jmxXB",
         "bxzeL-i0m2hB",
         "PlVk0ly3m8SH",
@@ -57,7 +56,16 @@
       },
       "cell_type": "markdown",
       "source": [
-        "## Pragmatic AI Labs\n",
+        "## Pragmatic AI Labs\n"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "rn5lBAv20LIH",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
         "![alt text](https://paiml.com/images/logo_with_slogan_white_background.png)\n",
         "\n",
         "This notebook was produced by [Pragmatic AI Labs](https://paiml.com/).  You can continue learning about these topics by:\n",
@@ -65,8 +73,9 @@
         "*   Buying a copy of [Pragmatic AI: An Introduction to Cloud-Based Machine Learning](http://www.informit.com/store/pragmatic-ai-an-introduction-to-cloud-based-machine-9780134863917)\n",
         "*   Reading an online copy of [Pragmatic AI:Pragmatic AI: An Introduction to Cloud-Based Machine Learning](https://www.safaribooksonline.com/library/view/pragmatic-ai-an/9780134863924/)\n",
         "*  Watching video [Essential Machine Learning and AI with Python and Jupyter Notebook-Video-SafariOnline](https://www.safaribooksonline.com/videos/essential-machine-learning/9780135261118) on Safari Books Online.\n",
+        "* Watching video [AWS Certified Machine Learning-Speciality](https://learning.oreilly.com/videos/aws-certified-machine/9780135556597)\n",
         "* Purchasing video [Essential Machine Learning and AI with Python and Jupyter Notebook- Purchase Video](http://www.informit.com/store/essential-machine-learning-and-ai-with-python-and-jupyter-9780135261095)\n",
-        "*   Viewing more content at [noahgift.com](https://noahgift.com/)\n"
+        "*   Viewing more content at [noahgift.com](https://noahgift.com/)"
       ]
     },
     {
@@ -208,10 +217,10 @@
       "metadata": {
         "id": "XI73HZNLobp4",
         "colab_type": "code",
-        "outputId": "641e088c-fd8a-4452-9ddc-a66fb22988e3",
+        "outputId": "af9b724d-7284-49c3-d3bd-0203a7215a44",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 125
+          "height": 123
         }
       },
       "cell_type": "code",
@@ -238,10 +247,10 @@
       "metadata": {
         "id": "UNyzZwgmoxwm",
         "colab_type": "code",
-        "outputId": "1be9ef3b-60bf-4aa7-918c-20c83341fe23",
+        "outputId": "c305b89a-5e43-4f1f-f0af-2ab603dfd970",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 34
         }
       },
       "cell_type": "code",
@@ -260,7 +269,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 6
         }
       ]
     },
@@ -325,10 +334,10 @@
       "metadata": {
         "id": "P-A8Cia-raT0",
         "colab_type": "code",
-        "outputId": "a64ec7f4-9659-4ce1-c637-523831331837",
+        "outputId": "198fe3eb-ea5c-4698-e73c-7038c28c67a3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 246
+          "height": 240
         }
       },
       "cell_type": "code",
@@ -347,10 +356,10 @@
               "{'ResponseMetadata': {'HTTPHeaders': {'connection': 'keep-alive',\n",
               "   'content-length': '164',\n",
               "   'content-type': 'application/x-amz-json-1.1',\n",
-              "   'date': 'Tue, 04 Dec 2018 19:10:58 GMT',\n",
-              "   'x-amzn-requestid': '54e64fc0-f7f8-11e8-8c3f-f109987ed7df'},\n",
+              "   'date': 'Wed, 09 Jan 2019 03:16:52 GMT',\n",
+              "   'x-amzn-requestid': '02748c54-13bd-11e9-9d75-77c414a099ee'},\n",
               "  'HTTPStatusCode': 200,\n",
-              "  'RequestId': '54e64fc0-f7f8-11e8-8c3f-f109987ed7df',\n",
+              "  'RequestId': '02748c54-13bd-11e9-9d75-77c414a099ee',\n",
               "  'RetryAttempts': 0},\n",
               " u'Sentiment': u'NEGATIVE',\n",
               " u'SentimentScore': {u'Mixed': 0.010819978080689907,\n",
@@ -362,7 +371,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 10
         }
       ]
     },
@@ -423,10 +432,10 @@
       "metadata": {
         "id": "u3erHX8aolFn",
         "colab_type": "code",
-        "outputId": "5919eb9b-9f03-43e3-93fd-24bbcae9c168",
+        "outputId": "a3d96de2-e386-4f7f-f184-c875faea11e5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 87
+          "height": 86
         }
       },
       "cell_type": "code",
@@ -439,9 +448,9 @@
           "output_type": "stream",
           "text": [
             "total 4\n",
-            "srw------- 1 root root    0 Dec  4 19:08 drivefs_ipc.0\n",
-            "srw------- 1 root root    0 Dec  4 19:09 drivefs_ipc.0_shell\n",
-            "-rw-r--r-- 1 root root 1447 Dec  4 19:11 nba_2017_endorsement_full_stats.csv\n"
+            "srw------- 1 root root    0 Jan  8 19:06 drivefs_ipc.0\n",
+            "srw------- 1 root root    0 Jan  8 19:06 drivefs_ipc.0_shell\n",
+            "-rw-r--r-- 1 root root 1447 Jan  8 19:09 nba_2017_endorsement_full_stats.csv\n"
           ],
           "name": "stdout"
         }
@@ -451,7 +460,7 @@
       "metadata": {
         "id": "FC1HAjYGopuw",
         "colab_type": "code",
-        "outputId": "d11a1e28-efac-4590-b211-9c6950eaad62",
+        "outputId": "794a7562-5324-4f79-9f71-37cc4ca3fc4c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 343
@@ -658,7 +667,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 8
         }
       ]
     },
