--- a/Public_SafariOnline_Day2_Part2.ipynb
+++ b/Public_SafariOnline_Day2_Part2.ipynb
@@ -168,6 +168,8 @@
       },
       "cell_type": "markdown",
       "source": [
+        "* [Watch AWS Certified Machine Learning-Specialilty Video](https://learning.oreilly.com/videos/aws-certified-machine/9780135556597/)\n",
+        "\n",
         "![ml certification path](https://d1.awsstatic.com/training-and-certification/Learning_Paths/ml-path_exam-prep_light.0d48656f11f8440d5c981b03a07f86cda2814058.png)"
       ]
     },
@@ -385,6 +387,7 @@
         "### Using Boto\n",
         "\n",
         "* *[Watch Video Lesson 11.2:  Use Boto](https://www.safaribooksonline.com/videos/essential-machine-learning/9780135261118/9780135261118-EMLA_01_11_02)*\n",
+        "* *[Watch Video Lesson 7.4:  AWS Flavored Python](https://learning.oreilly.com/videos/aws-certified-machine/9780135556597/9780135556597-ACML_01_07_04)* \n",
         "\n",
         "\n"
       ]
@@ -743,6 +746,10 @@
         "An emerging development environment for Lambda\n",
         "\n",
         "\n",
+        "\n",
+        "*   [Watch Video Lesson 7.5 Cloud9:  AWS ML Certification](https://learning.oreilly.com/videos/aws-certified-machine/9780135556597/9780135556597-ACML_01_07_05)\n",
+        "\n",
+        "\n",
         "![Cloud9](https://user-images.githubusercontent.com/58792/50839709-bac19300-1315-11e9-9383-8e2e76bc9759.png)"
       ]
     },
@@ -810,7 +817,7 @@
       "source": [
         "### Using Step functions with AWS\n",
         "\n",
-        "* *[Watch Video Lesson 11.5:  Use AWS Step Functions](https://www.safaribooksonline.com/videos/essential-machine-learning/9780135261118/9780135261118-EMLA_01_11_05)*"
+        "* *[Watch Video Lesson 11.5:  Use AWS Step Functions](https://www.safaribooksonline.com/videos/essential-machine-learning/9780135261118/9780135261118-EMLA_01_11_05)*\n"
       ]
     },
     {
@@ -889,7 +896,7 @@
         "### Using AWS Sagemaker \n",
         "\n",
         "* *[Watch Video Lesson 11.7:  Use AWS Sagemaker](https://www.safaribooksonline.com/videos/essential-machine-learning/9780135261118/9780135261118-EMLA_01_11_07)*\n",
-        "\n",
+        "* *[Watch Video Lesson 7.1: Sagemaker Features](https://learning.oreilly.com/videos/aws-certified-machine/9780135556597/9780135556597-ACML_01_07_01)*\n",
         "\n"
       ]
     },
@@ -1204,6 +1211,7 @@
         "*   [Pragmatic AI: An Introduction to Cloud-Based Machine Learning-Physical Book](http://www.informit.com/store/pragmatic-ai-an-introduction-to-cloud-based-machine-9780134863917)\n",
         "*   [Pragmatic AI: Pragmatic AI: An Introduction to Cloud-Based Machine Learning-SafariOnline Book](https://www.safaribooksonline.com/library/view/pragmatic-ai-an/9780134863924/)\n",
         "*  [Essential Machine Learning and AI with Python and Jupyter Notebook-Video-SafariOnline](https://www.safaribooksonline.com/videos/essential-machine-learning/9780135261118)\n",
+        "* [AWS Certified Machine Learning-Speciality (MLS) Video-Safari Online](https://learning.oreilly.com/videos/aws-certified-machine/9780135556597)\n",
         "* [Essential Machine Learning and AI with Python and Jupyter Notebook- Purchase Video](http://www.informit.com/store/essential-machine-learning-and-ai-with-python-and-jupyter-9780135261095)\n",
         "*   [noahgift.com](https://noahgift.com/)\n",
         "*   [paiml.com](https://paiml.com/)\n",
